examples/test/testpolicy7006.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7006
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key42: value13
      key15: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value2
          key44: value16
          key18: value16
      podSelector:
        matchLabels:
          key32: value13
          key38: value24
          key4: value9
